@@ -1,4 +1,4 @@
-Copyright (C) 2010, Kaz Kylheku <kkylheku@gmail.com>.
+Copyright (C) 2011, Kaz Kylheku <kkylheku@gmail.com>.
 All rights reserved.
 
 BSD License:
