@@ -1,4 +1,4 @@
-/* Copyright 2010
+/* Copyright 2011
  * Kaz Kylheku <kkylheku@gmail.com>
  * Vancouver, Canada
  * All rights reserved.
